--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": "^7.8.1"
+    "eslint": ">=7.0.0"
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.0.3",
@@ -16,9 +16,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-react": "^7.20.6",
-    "eslint": "^7.6.0",
     "prettier": "^2.1.1"
   }
 }
