--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": ">=7.0.0"
+    "eslint": ">=7.5.0",
+    "prettier": ">=2.0.0"
   },
   "dependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.13.14",
     "@rushstack/eslint-patch": "^1.0.6",
-    "babel-eslint": "^10.1.0",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react": "^7.23.1",
     "prettier": "^2.2.1"
   }
 }
