--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
@@ -9,17 +9,16 @@
     "prettier": ">=2.0.0"
   },
   "dependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/eslint-parser": "^7.13.14",
+    "@babel/core": "^7.14.2",
+    "@babel/eslint-parser": "^7.14.2",
     "@rushstack/eslint-patch": "^1.0.6",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
