--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "2.2.0",
+  "version": "2.3.1",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^4.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
