--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": ">=8.0.1",
+    "eslint": ">=7.0.0",
     "prettier": ">=2.4.1"
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@babel/eslint-parser": "^7.15.8",
-    "@rushstack/eslint-patch": "^1.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@rushstack/eslint-patch": "^1.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-next": "^11.1.2",
+    "eslint-config-next": "^12.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "resolutions": {
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-4298ddbc5-20211023"
   }
 }
