--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "6.2.2",
+  "version": "7.0.3-beta",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
-  "peerDependencies": {
-    "eslint": ">=8.0.0"
+  "engines": {
+    "node": ">=16"
+  },
+  "volta": {
+    "node": "16.14.2",
+    "yarn": "1.22.18"
   },
   "dependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@rushstack/eslint-patch": "^1.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-next": "^12.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "prettier": "^2.6.2"
+  },
+  "peerDependencies": {
+    "eslint": ">=8.12.0",
+    "prettier": ">=2.6.1"
   }
 }
