--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "7.0.0",
+  "version": "7.0.2",
   "main": "index.js",
   "author": "mrroll",
   "license": "MIT",
@@ -14,13 +14,13 @@
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
-    "@rushstack/eslint-patch": "^1.1.2",
+    "@rushstack/eslint-patch": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.1.4",
+    "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -33,7 +33,7 @@
     "prettier": "^2.6.2"
   },
   "peerDependencies": {
-    "eslint": ">=8.12.0",
-    "prettier": ">=2.6.1"
+    "eslint": "^8.13.0",
+    "prettier": "^2.6.2"
   }
 }
