--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "7.4.0",
+  "version": "8.0.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
