--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "8.0.0",
+  "version": "8.1.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
+  "volta": {
+    "node": "16.15.0",
+    "yarn": "1.22.18"
+  },
   "dependencies": {
     "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
     "@rushstack/eslint-patch": "^1.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.1.5",
+    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.14.0",
-    "prettier": "^2.6.2"
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "semver": "^7.3.7"
   },
   "peerDependencies": {
     "eslint": "^8.14.0",
     "prettier": "^2.6.2"
   },
-  "engines": {
-    "node": ">=16"
-  },
-  "volta": {
-    "node": "16.15.0",
-    "yarn": "1.22.18"
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "prettier": "^2.6.2"
   }
 }
