--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "8.1.0",
+  "version": "8.3.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
+  "scripts": {
+    "prepublishOnly": "yarn install --frozen-lockfile"
+  },
   "volta": {
     "node": "16.15.0",
     "yarn": "1.22.18"
