--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "8.3.0",
+  "version": "8.4.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
   "scripts": {
-    "prepublishOnly": "yarn install --frozen-lockfile"
+    "prepublishOnly": "yarn install"
   },
   "volta": {
     "node": "16.15.0",
