--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "8.28.0",
+  "version": "8.29.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
@@ -12,30 +12,30 @@
     "yarn": "1.22.19"
   },
   "dependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/eslint-parser": "^7.18.2",
+    "@next/eslint-plugin-next": "^12.1.6",
     "@rushstack/eslint-patch": "^1.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "semver": "^7.3.7"
   },
   "peerDependencies": {
     "eslint": "^8.17.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.7.0"
   }
 }
