--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "9.18.0",
+  "version": "10.0.0-beta.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
