--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrroll/eslint-config",
-  "version": "10.0.0-beta.0",
+  "version": "10.0.0",
   "license": "MIT",
   "author": "mrroll",
   "main": "index.js",
@@ -31,11 +31,11 @@
     "semver": "^7.3.7"
   },
   "peerDependencies": {
-    "eslint": "^8.21.0",
+    "eslint": "^8.22.0",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "eslint": "^8.21.0",
+    "eslint": "^8.22.0",
     "prettier": "^2.7.1"
   }
 }
